[gd_scene load_steps=8 format=3 uid="uid://i6wej62j6blw"]

[ext_resource type="Script" path="res://Levels/menu.gd" id="1_nrn13"]
[ext_resource type="PackedScene" uid="uid://8w20wn4aughi" path="res://Levels/background.tscn" id="2_t3c17"]
[ext_resource type="Texture2D" uid="uid://dq1ej5f15s2da" path="res://Assets/station.png" id="3_4h86i"]
[ext_resource type="Texture2D" uid="uid://bs2kk7behjiuc" path="res://Assets/sun.png" id="3_dnsnn"]
[ext_resource type="AudioStream" uid="uid://cclw4p8qkj5gl" path="res://Assets/beepboops.mp3" id="5_il1at"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ytya"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aaws5"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nrn13")

[node name="Background" parent="." instance=ExtResource("2_t3c17")]
layout_mode = 1

[node name="Sun" type="Sprite2D" parent="."]
position = Vector2(921, 332)
scale = Vector2(5.89815, 5.89815)
texture = ExtResource("3_dnsnn")

[node name="Station" type="Sprite2D" parent="."]
position = Vector2(1365, 687)
scale = Vector2(3.08519, 3.08519)
texture = ExtResource("3_4h86i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = 10.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_3ytya")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 128
text = "Space KEYS"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_3ytya")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "START"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_aaws5")

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "LEAVE"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_3ytya")

[node name="ConfirmContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ConfirmContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/ConfirmContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Are you sure?"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ConfirmContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LeaveButton" type="Button" parent="MarginContainer/VBoxContainer/ConfirmContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "GET ME OUT!"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/ConfirmContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_aaws5")

[node name="NeverLeaveButton" type="Button" parent="MarginContainer/VBoxContainer/ConfirmContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "IM NEVER LEAVING"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ConfirmContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_3ytya")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_il1at")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ConfirmContainer/VBoxContainer/HBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ConfirmContainer/VBoxContainer/HBoxContainer/NeverLeaveButton" to="." method="_on_never_leave_button_pressed"]
